--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,25 @@
 @plugin "daisyui" {
   themes: all;
 }
+
+
+@layer utilities {
+  .animate-spin-slow {
+    animation: spin 5s linear infinite;
+  }
+
+  .animate-fade-in-up {
+    animation: fadeInUp 1s ease-out both;
+  }
+
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(10px);
+    }
+  }
+}
